# nexgrc_experimental

./: .gitignore  .travis.yml  README.md
nexgrc_client/: CMakeLists.txt  package.xml
nexgrc_client/launch/: start.launch  start_rviz_demo.launch
nexgrc_client/scripts/: grc_client.py  grc_essentials_string.py
nexgrc_client/srv/: StringCommand.srv
nexgrc_experimental/: CMakeLists.txt  package.xml
pmc6r_control/: CMakeLists.txt  package.xml
pmc6r_control/config/: pmc6r_control.yaml
pmc6r_control/launch/: pmc6r_control.launch  simulation_moveit.launch
pmc6r_control/scripts/: simple_mover.py
pmc6r_control/src/: simple_mover.cpp
pmc6r_gazebo/: CMakeLists.txt  package.xml
pmc6r_gazebo/launch/: pmc6r_world.launch
pmc6r_gazebo/world/: pmc6r.world
pmc6r_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
pmc6r_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  pmc6r.srdf  pmc6r_controllers.yaml
pmc6r_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pmc6r_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pmc6r_support/: CMakeLists.txt  package.xml
pmc6r_support/launch/: pmc6r_rviz.launch
pmc6r_support/meshes/collision/: PMC_BASEc.STL  PMC_J1c.STL  PMC_J2c.STL  PMC_J3c.STL  PMC_J4c.STL  PMC_J5c.STL  PMC_J6c.STL
pmc6r_support/meshes/visual/: PMC_BASE.STL  PMC_J1.STL  PMC_J2.STL  PMC_J3.STL  PMC_J4.STL  PMC_J5.STL  PMC_J6.STL
pmc6r_support/rviz/: pmc6r.rviz
pmc6r_support/urdf/: pmc6r.gazebo  pmc6r.urdf.xacro
